welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:3: error: '(' expected but identifier found.
    if b(<=10 || b>=20){
       ^max1020:7: error: '(' expected but identifier found.
  } else if b(<=10 || b>=20) {
            ^